package engineInterfaces.objects;

/// Represents a group of related data attributes attached to an entity or layer.
/// e.g a TransformComponent may contain position, rotation, and scale attributes for an entity.
/// This is just a base marker class.
public abstract class Component {

}
