package engineInterfaces.objects.components;

import engineInterfaces.objects.Component;
import engineInterfaces.objects.Point;

public class CameraComponent extends Component {
    public Point Origin;
    public int viewWidth;
    public int viewHeight;
}
