package engineInterfaces.objects.components;

import engineInterfaces.objects.Component;

public class RenderableComponent extends Component {
    public char Char;
    public String fgColour;
    public String bgColour;
}
