package engineInterfaces.objects.rendering;

public class Cell {
    public Character content;
    public int fgColor;
    public int bgColor;
}
