---
config:
  layout: elk
---

classDiagram
    class EventBus {
        -Queues: Dict[EventTypes, Queue[Event]]
        -Listeners: Dict[EventTypes, Func[Event, void]]
        +Publish(event: Event) void
        +Subscribe(eventType: EventTypes, callback: Func[Event, void]) void
        +Flush() void
    }

    class Engine {
        + SystemRegistry: SystemRegistry
        + EventBus: EventBus
        + World: World
        + GraphicsAPI: GraphicsAPI
        + Renderer: Renderer

        + Start() void
    }

    class World {
        + Entities: Dict[EntityID, List[Component]]
        + EntityComponentIndex: Dict[Component, List[EntityID]]

        + Layers: Dict[LayerID, Layer]
        + LayerComponentIndex: Dict[Component, List[LayerID]]
    }

    class SystemRegistry {
        + Systems: ArrayList[System]
        + SystemIndex: Dict[string, System]
        + Register(System system, string Identifier)
    }


    class Renderer {
        # renderPipelines: ArrayList[RenderPass]
        # render(World world, GraphicsAPI IO) void
        - cameraView: CameraView

        - renderBuffer: RenderBuffer

    }

    class Cell {
        + Content: char
        + fgColor: string
        + bgColor: string
    }

    class RenderPass {
        <<abstract>>
        + render(World world, CameraView camera, RenderBuffer buffer) void
    }


    class UIRenderPass {
    }

    class TilemapRenderPass {
    }

    class EntityRenderPass {
    }


    class InputHandler {
        InputHandler(World world, EventBus eventBus, GraphicsAPI io)
        # update(TimeDelta delta) void
    }
    class RenderBuffer {
        - cells = Cell[][]
        - width: int
        -  height: int
        + set(x: int, y: int, Cell cell) void
        + get(x: int, y: int) Cell
        + clear() void
        }

    class CameraView {
        - originX: int
        - originY: int
        - viewWidth: int
        - viewHeight: int

        + CameraView(CameraComponent camera) void
        + isInView(Vector2Int position) bool
        + worldToView(Vector2Int worldPos) Vector2Int
    }
    class System {
        <<abstract>>
        + System(World world, EventBus eventBus)
        + update(TimeDelta delta) void
    }

    class Point {
        <<record>>
        + x: int
        + y: int
    }

    class Component {
        <<interface>>
    }

    class CameraComponent {
        + origin: Vector2Int
        + viewWidth: int
        + viewHeight: int
    }

    class RenderableComponent {
        + Content: char
        + fgColor: string
        + bgColor: string
    }

    class GraphicsAPI {
        <<interface>>
        + render(RenderBuffer buffer) void
        + listen(callback: Func[InputEvent, void]) void
        + clear() void

        + getWidth() int
        + getHeight() int
        + onResize(callback: Func[void]) void
    }

    class Resources {
        + ResoucePath: Path
        +
    }


Engine *-- World
Engine *-- SystemRegistry
Engine *-- Resources
Engine *-- EventBus
Engine *-- Renderer
Engine *-- GraphicsAPI

Renderer *-- RenderBuffer
Renderer *-- CameraView : updates each tick
Renderer o-- RenderPass

RenderPass <|-- TilemapRenderPass
RenderPass <|-- EntityRenderPass
RenderPass <|-- UIRenderPass

RenderBuffer o-- Cell

SystemRegistry o-- System

Component <|-- CameraComponent
Component <|-- RenderableComponent

System <|-- InputHandler

World o-- Component